<resources>
    <string name="app_name">Beacon</string>
    <string name="cek_kelayakan_tab_title">Cek Kelayakan</string>
    <string name="cek_bansos_tab_title">Cek Bansos</string>
    <string name="social_asistance_template_result">Warga dengan nama %s dan NIK %s %s penerima bantuan pangan non tunai</string>
    <string name="citizen_not_found">Warga dengan NIK %s tidak ditemukan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nik">NIK</string>
    <string name="cek_bansos">Cek Bansos</string>
    <string name="ok">OK</string>
    <string name="result">Hasil Pengecekan</string>
    <string name="please_input_nik">Please input your NIK first</string>
    <string name="tanggungan">Jumlah Tanggungan</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="status">Status Kepemilikan</string>
    <string name="lantai">Material Lantai</string>
    <string name="dinding">Material Dinding</string>
    <string name="luas">Luas Bangunan</string>
    <string name="jenis">Jenis Transformasi</string>
    <string name="cek">Cek Kelayakan</string>
    <string name="description">Description</string>
    <string name="pass_criteria">Berdasarkan kriteria-kriteria yang anda kirimkan, anda %s kriteria yang layak mendapatkan bantuan pangan non tunai.</string>
</resources>