<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/number_of_dependents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggungan"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pendapatan"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/home_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/floor_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lantai"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/wall_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dinding"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                android:id="@+id/building_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/luas"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cek"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/cek"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>
</ScrollView>
